[package]
name = "buffered_offset_reader"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sbillig/buffered_offset_reader"
keywords = ["buffered", "read_at", "pread", "seek_read"]

[dependencies]

[dev-dependencies]
criterion = "0.2"
tempfile = "3.0"

[[bench]]
name = "bench"
harness = false
